15.1 Add Text generator from ChatGPT (Добавили генератор текстов)